plug index and root view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wwsg</title>
+  <title>Where Would Sylvia Go?</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link href='https://fonts.googleapis.com/css?family=Vidaloka' rel='stylesheet' type='text/css' >
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<nav>
+  <h1>Where would Silvia go?<h1>
+  <img src="https://avatars1.githubusercontent.com/u/10377524?v=3&s=460" width="50" height="50" alt="Icon" id="silvia"> </img>
+</nav>
 
 <%= yield %>
 
