udpate views, css, for new seed data

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,14 +22,25 @@ body {
   background-color: #ff0f5;
 }
 
-nav {
-  background-color: #CDE559;
+header {
   height: 2em;
-  font-family: monospace;
+  font-family: 'Abril Fatface', cursive;
   font-size: 2em;
+  color: #CDE559;
+  text-align: center;
 }
 
-.restaurant {
+header li {
+  list-style:none;
+  display: inline block;
+}
+
+main {
+  padding-top: 25px;
+}
+
+.restaurant,
+.tagbox {
   margin: 0 1em;
   padding: 2em;
   background-color: #7CA8C8;
@@ -41,8 +52,9 @@ nav {
   -moz-column-gap: 2em;
 }
 
-.eachRestaurant {
-  font-family: Georgia;
+.eachRestaurant,
+.tagnames {
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
 }
 
@@ -55,11 +67,45 @@ a:hover {
   text-decoration: underline;
 }
 
-
 .heading {
-  font-family: Georgia;
+  font-family: 'Raleway', sans-serif;
   font-size: 20px;
   font-weight: bold;
   text-align: center;
   line-height: 2em;
+}
+
+.plugshow,
+.tagshow {
+  font-family: 'Raleway', sans-serif;
+  margin: 40px auto;
+  width: 50%;
+  text-align: center;
+}
+
+.plugInfo {
+  padding-bottom: 1em;
+}
+.plugSection {
+  background-color: #66cccc;
+}
+
+.plugTags,
+.tagPlugs {
+  /*background-color: #d8e4d4;*/
+  margin: 1em 0;
+}
+
+.plugTags a,
+.tagPlugs a {
+  color: tomato;
+}
+
+.back a {
+  color: #66cccc;
+}
+
+#restaurant{
+  font-size: 2em;
+  padding-bottom: .3em;
 }
