test seed data, new routing, included tag actions in plug model, updated controllers

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<div class="heading">You want <%= @tag.name %>! <span class="back"></div>
+<div class="heading">You want: <%=@tag %> ! <span class="back"></div>
 <div class="tagshow">
   <% @plugs.each do |plug| %>
     <p class="tagPlugs">
