--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Where Would Sylvia Go?</title>
+  <title>Where Would Silvia Go?</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
   <link href='https://fonts.googleapis.com/css?family=Vidaloka|Raleway|Abril+Fatface' rel='stylesheet' type='text/css' >
