--- a/app/views/plugs/show.html.erb
+++ b/app/views/plugs/show.html.erb
@@ -6,9 +6,7 @@
 
 <h3>
 <p class="plugTags">
-<% @tags.each do |tag| %>
-    <%= link_to tag.name, tag_path(tag) %> |
-<% end %>
+<%= @plug.tag_list %>
 </p>
 
 <p class="plugSection"> Silvia's favorite dish</p>
