--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,6 +79,17 @@ a:hover {
 .tagshow {
   font-family: 'Raleway', sans-serif;
   margin: 40px auto;
+  text-align: center;
+}
+
+.plugshow {
+  width: 50%;
+}
+
+.eachPlug {
+  border: .09em solid black;
+  padding: 2em;
+  margin: 2em auto;
   width: 50%;
   text-align: center;
 }
@@ -86,8 +97,10 @@ a:hover {
 .plugInfo {
   padding-bottom: 1em;
 }
+
 .plugSection {
   background-color: #66cccc;
+  font-style: bold;
 }
 
 .plugTags,
@@ -105,7 +118,15 @@ a:hover {
   color: #66cccc;
 }
 
+span .back {
+  font-size: .09em;
+}
 #restaurant{
   font-size: 2em;
   padding-bottom: .3em;
+  padding-top: .5em;
+}
+
+#tagRestaurant {
+  color: tomato;
 }
